--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Презентация лестниц - конфигуратор" />
-    <title>Диз от Андрея - Конфигуратор лестниц</title>
+    <meta name="description" content="Диз от Андрея - конфигуратор лестниц" />
+    <title>Диз от Андрея</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700&display=swap" rel="stylesheet">
@@ -60,38 +60,16 @@
             margin: 0;
             line-height: normal;
             font-family: var(--font-rubik);
-            background-color: var(--color-whitesmoke);
-            padding: 40px 20px;
         }
 
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        .header {
-            text-align: center;
-            margin-bottom: 60px;
-        }
-
-        .header h1 {
-            color: var(--color-firebrick-100);
-            font-size: var(--font-size-40);
-            font-weight: 700;
-            margin-bottom: 20px;
-            text-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        .header p {
-            color: var(--color-black);
-            font-size: var(--font-size-20);
-            font-weight: 400;
-            opacity: 0.8;
-        }
-
-        .stairs-configurator {
+        /* Точная копия стилей из Locofy FrameComponent.module.css */
+        .frameChild,
+        .rectangleParent {
             border-radius: var(--br-36);
             max-width: 100%;
+        }
+
+        .rectangleParent {
             flex: 1;
             display: flex;
             flex-direction: column;
@@ -100,67 +78,57 @@
             padding: 123px 65px 194px 42px;
             box-sizing: border-box;
             gap: var(--gap-60);
-            background-image: url('./sait/public/rectangle-64@2x.png');
+            background-image: url(./rectangle-64@2x.png);
             background-size: cover;
             background-repeat: no-repeat;
-            background-position: center;
+            background-position: top;
             min-width: 278px;
             text-align: center;
             font-size: var(--font-size-14);
             color: var(--color-firebrick-100);
             font-family: var(--font-rubik);
-            min-height: 600px;
+            min-height: 100vh;
+        }
+
+        .frameChild {
+            width: 428px;
+            height: 493px;
             position: relative;
-            overflow: hidden;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+            object-fit: cover;
+            display: none;
         }
 
-        .stairs-configurator::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: linear-gradient(45deg, rgba(208, 44, 48, 0.1), rgba(94, 63, 165, 0.1));
-            z-index: 0;
-        }
-
-        .frame-wrapper {
+        .frameWrapper {
             align-self: stretch;
             flex-direction: row;
+        }
+
+        .frameParent,
+        .frameWrapper,
+        .vectorWrapper {
             display: flex;
             align-items: flex-start;
             justify-content: flex-start;
-            z-index: 1;
         }
 
-        .frame-parent {
+        .frameParent {
             width: 150px;
-            display: flex;
             flex-direction: column;
-            align-items: flex-start;
-            justify-content: flex-start;
         }
 
-        .vector-wrapper {
-            display: flex;
+        .vectorWrapper {
             flex-direction: row;
-            align-items: flex-start;
-            justify-content: flex-start;
             padding: 0 var(--padding-24);
         }
 
-        .frame-item {
+        .frameItem {
             height: 10px;
             width: 10px;
             position: relative;
             z-index: 1;
-            background: var(--color-firebrick-100);
-            border-radius: 50%;
         }
 
-        .rectangle-group {
+        .rectangleGroup {
             align-self: stretch;
             border-radius: var(--br-24);
             background-color: var(--color-white);
@@ -169,17 +137,22 @@
             align-items: flex-start;
             justify-content: flex-start;
             z-index: 1;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
 
-        .rectangle-group:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
-        }
-
-        .step-label {
+        .div,
+        .frameInner {
             height: 48px;
+            position: relative;
+        }
+
+        .frameInner {
+            width: 150px;
+            border-radius: var(--br-24);
+            background-color: var(--color-white);
+            display: none;
+        }
+
+        .div {
             flex: 1;
             line-height: 20px;
             font-weight: 600;
@@ -188,29 +161,29 @@
             justify-content: center;
             text-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
             z-index: 1;
-            color: var(--color-firebrick-100);
         }
 
-        .frame-group {
-            width: 120px;
+        .frameGroup,
+        .rectangleContainer {
             display: flex;
+            justify-content: flex-start;
+        }
+
+        .frameGroup {
+            width: 120px;
             flex-direction: column;
             align-items: flex-end;
-            justify-content: flex-start;
             gap: var(--gap-28);
-            z-index: 1;
         }
 
-        .rectangle-container {
+        .rectangleContainer {
             align-self: stretch;
-            display: flex;
             flex-direction: row;
             align-items: flex-start;
-            justify-content: flex-start;
             position: relative;
         }
 
-        .rectangle-div {
+        .rectangleDiv {
             height: 48px;
             width: 100%;
             position: absolute;
@@ -223,20 +196,18 @@
             transform: rotate(-180deg);
             transform-origin: 0 0;
             z-index: 1;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
         }
 
-        .bumper-label {
+        .rectangleParentDiv {
             flex: 1;
             position: relative;
             line-height: 20px;
             font-weight: 600;
             text-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
             z-index: 2;
-            color: var(--color-firebrick-100);
         }
 
-        .vector-container {
+        .vectorContainer {
             display: flex;
             flex-direction: row;
             align-items: flex-start;
@@ -244,123 +215,56 @@
             padding: 0 var(--padding-24);
         }
 
-        .rectangle-icon {
+        .rectangleIcon {
             height: 10px;
             width: 10px;
             position: relative;
+            object-fit: contain;
             z-index: 1;
-            background: var(--color-firebrick-100);
-            border-radius: 50%;
-        }
-
-        .features {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 30px;
-            margin-top: 60px;
-        }
-
-        .feature-card {
-            background: var(--color-white);
-            padding: 30px;
-            border-radius: var(--br-24);
-            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .feature-card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.15);
-        }
-
-        .feature-card h3 {
-            color: var(--color-firebrick-100);
-            font-size: var(--font-size-24);
-            font-weight: 600;
-            margin-bottom: 15px;
-        }
-
-        .feature-card p {
-            color: var(--color-black);
-            font-size: var(--font-size-16);
-            opacity: 0.8;
-            line-height: 1.6;
         }
 
         @media screen and (max-width: 675px) {
-            .stairs-configurator {
+            .rectangleParent {
                 padding-top: var(--padding-80);
                 padding-bottom: 126px;
                 box-sizing: border-box;
             }
-
-            .header h1 {
-                font-size: var(--font-size-32);
-            }
         }
 
         @media screen and (max-width: 450px) {
-            .stairs-configurator {
+            .rectangleParent {
                 gap: var(--gap-30);
                 padding-left: var(--padding-20);
                 padding-right: var(--padding-20);
                 box-sizing: border-box;
             }
-
-            .features {
-                grid-template-columns: 1fr;
-            }
-
-            body {
-                padding: 20px 10px;
-            }
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <header class="header">
-            <h1>Конфигуратор лестниц</h1>
-            <p>Проектирование и визуализация лестничных конструкций</p>
-        </header>
-
-        <section class="stairs-configurator">
-            <div class="frame-wrapper">
-                <div class="frame-parent">
-                    <div class="vector-wrapper">
-                        <div class="frame-item"></div>
-                    </div>
-                    <div class="rectangle-group">
-                        <div class="step-label">Подступенник</div>
-                    </div>
+    <!-- Точная копия структуры из FrameComponent.tsx -->
+    <section class="rectangleParent">
+        <img class="frameChild" alt="" src="./rectangle-64@2x.png" />
+        <div class="frameWrapper">
+            <div class="frameParent">
+                <div class="vectorWrapper">
+                    <img class="frameItem" loading="lazy" alt="" src="./sait/public/rectangle-38.svg" />
+                </div>
+                <div class="rectangleGroup">
+                    <div class="frameInner"></div>
+                    <div class="div">Подступенник</div>
                 </div>
             </div>
-            <div class="frame-group">
-                <div class="rectangle-container">
-                    <div class="rectangle-div"></div>
-                    <div class="bumper-label">Отбойник</div>
-                </div>
-                <div class="vector-container">
-                    <div class="rectangle-icon"></div>
-                </div>
+        </div>
+        <div class="frameGroup">
+            <div class="rectangleContainer">
+                <div class="rectangleDiv"></div>
+                <div class="rectangleParentDiv">Отбойник</div>
             </div>
-        </section>
-
-        <section class="features">
-            <div class="feature-card">
-                <h3>Подступенники</h3>
-                <p>Настройка высоты, материала и дизайна подступенников для оптимального комфорта и безопасности.</p>
+            <div class="vectorContainer">
+                <img class="rectangleIcon" loading="lazy" alt="" src="./sait/public/rectangle-38.svg" />
             </div>
-            <div class="feature-card">
-                <h3>Отбойники</h3>
-                <p>Защитные элементы лестницы, предотвращающие повреждения и обеспечивающие дополнительную безопасность.</p>
-            </div>
-            <div class="feature-card">
-                <h3>Индивидуальный дизайн</h3>
-                <p>Персонализация каждого элемента лестницы в соответствии с вашими требованиями и интерьером.</p>
-            </div>
-        </section>
-    </div>
+        </div>
+    </section>
 </body>
 </html>
